All the plumbing to be able to run an actor